Infra/k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels: { app: user-service, tier: java }
spec:
  replicas: 1
  selector:
    matchLabels: { app: user-service }
  template:
    metadata:
      labels: { app: user-service, tier: java }
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: user-service
          image: vkp/user-service:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests: { cpu: 250m, memory: 512Mi }
            limits: { memory: 1Gi }
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels: { app: user-service }
spec:
  selector: { app: user-service }
  ports:
    - port: 8082
      targetPort: 8082
